--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,14 @@
         "symfony/yaml": "6.2.*"
     },
     "require-dev": {
+        "phpro/grumphp": "^1.16"
     },
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "phpro/grumphp": true
         },
         "sort-packages": true
     },
