ADD: Initialisation Phplint

--- a/config/grumphp.yml
+++ b/config/grumphp.yml
@@ -24,7 +24,7 @@ grumphp:
 
             git_pre_push:
                 # Tâches à exécuter avant un push
-                # - phplint
+                - phplint
                 # - phpcs
                 # - phpstan
 
