--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/yaml": "6.2.*"
     },
     "require-dev": {
+        "overtrue/phplint": "^9.0",
         "phpro/grumphp": "^1.16",
         "phpstan/phpstan": "^1.10"
     },
