FIXE: Initialisation PHP_CodeSniffer

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require-dev": {
         "overtrue/phplint": "^9.0",
         "phpro/grumphp": "^1.16",
-        "phpstan/phpstan": "^1.10"
+        "phpstan/phpstan": "^1.10",
+        "squizlabs/php_codesniffer": "*"
     },
     "config": {
         "allow-plugins": {
